# tfs

./: .gitignore  README.md  pyproject.toml
src/tfs/: attention.py  multi_head_self_attention.py
src/tfs/attention/: multi_head_self_attention.py  self_attention.py
src/tfs/layer/: __init__.py  positional_encodings.py  transformer_layer.py
src/tfs/positional_encodings/: __init__.py  positional_encodings.py
src/tfs/tokenization/: byte_pair_encoding.py
